--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,52 +8,14 @@
             margin: 8px;
             background-color: #ccc;
         }
-        #mouse{
-            width:18px;
-            height: 18px;
-            background-color: black;
-            border-radius: 50%;
-            position: absolute;
-        }
-        #key{
-            position: fixed;
-            top: 94%;
-            left: 40%;
-            height: 15px;
-        }
-        #submitBtn{
-            position: fixed;
-            top: 94%;
-            left: 52%;
-        }
     </style>
     <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
     <script type="text/javascript">
         function getMousePos(event) {
             var x,y;
             var e = e||window.event;
-
             return { x:e.clientX+document.body.scrollLeft+document.documentElement.scrollLeft-8,
                 y:e.clientY+document.body.scrollTop+document.documentElement.scrollTop-8};
-        }
-        function move(event){
-            var i = getMousePos(event);
-          //  $("#mouse").css("top",i.y);
-           // $("#mouse").css("left",i.x);
-           sendMessage(i);
-        }
-        function MouseClick(event){
-            var data;
-            if(event.button == 0){
-                data = {'mouseClick': '1'};
-            } else if(event.button == 2){
-                data = {'mouseClick': '3'};
-                sendMessage(data);
-            }
-
-        }
-        function submit(){
-            $('#key').val();
         }
         var socket;
         openSocket();
@@ -63,7 +25,7 @@
             }else{
                 console.log("您的浏览器支持WebSocket");
                 //实现化WebSocket对象，指定要连接的服务器地址与端口  建立连接
-                //var socketUrl="ws://dlz123.cn1.utools.club/webSocket/"+10;
+                // var socketUrl="ws://dlz123.cn1.utools.club/webSocket/"+10;
                 var socketUrl = "ws://localhost:22599/webSocket/10"
                 console.log(socketUrl);
                 if(socket!=null){
@@ -101,17 +63,24 @@
                 console.log("您的浏览器不支持WebSocket");
             }else {
                 // console.log("您的浏览器支持WebSocket");
-                socket.send(JSON.stringify(i));
+              socket.send(JSON.stringify(i));
             }
         }
-
         $(document).ready(function(){
             // 在这里写你的代码...
+            $(document).keyup(function(event){
+                var e = event || window.event;
+                var k = e.keyCode || e.which;
+                console.log(k);
+                var data ={'status':1,'key':k};
+                socket.send(JSON.stringify(data));
+                return false;
+            });
             $(document).keydown(function(event){
                 var e = event || window.event;
                 var k = e.keyCode || e.which;
                 console.log(k);
-                var data ={'key':k};
+                var data ={'status':0,'key':k};
                 socket.send(JSON.stringify(data));
                 return false;
             });
@@ -121,20 +90,40 @@
             return false;
         }
         document.oncontextmenu=stop;
-
-        function imgClick(){
-            console.log('111111');
+        function move(event){
+            var i = getMousePos(event);
+            sendMessage(i);
         }
+        function MouseClick(event){
+            if(event.button == 0){
+                data = {'mouseClick': '1'};
+                sendMessage(data);
+            } else if(event.button == 2){
+                data = {'mouseClick': '3'};
+                sendMessage(data);
+            }
+        }
+        function mouseup(event){
+            if(event.button == 0){
+                data = {'mouseClick': '4'};
+                sendMessage(data);
+            } else if(event.button == 2){
+                data = {'mouseClick': '6'};
+                sendMessage(data);
+            }
+        }
+        function imgdragstart(){return false;}
+        for(i in document.images)document.images[i].ondragstart=imgdragstart;
     </script>
 </head>
-<body  >
-    <img id="images1"  onclick="imgClick()" onmousedown="MouseClick(event)"
-         style="width: 1920px;height: 1080px;background-color: #ccc;" align="center"  width="100%" height="100%"
-         onmousemove="move(event)"/>
-<!--    <div id="mouse"></div>-->
-  <!--
-   onclick="MouseClick()"
-  <input id="key" type="text" placeholder="请输入操作:"/>
-    <button id="submitBtn" onclick="submit()">提交</button>-->
+<body>
+    <img id="images1"
+         onmousedown="MouseClick(event)"
+         onmouseup="mouseup(event)"
+         onmousemove="move(event)"
+         style="width: 1920px;height: 1080px;background-color: #ccc;"
+         align="center"
+         src="images/1432568966fc399e36ee92b46c9fded8.jpg"
+    />
 </body>
 </html>
